force-app/main/default/objects/Room__c/fields/Room_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Room_is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box to indicate that the room is available for booking.</inlineHelpText>
    <label>Room is Active</label>
    <type>Checkbox</type>
</CustomField>