force-app/main/default/objects/Room__c/fields/Room_Size_SqM__c.field-meta.xml
<CustomField>
    <fullName>Room_Size_SqM__c</fullName>
    <inlineHelpText>The size of the room in Square Metres or Square Feet.</inlineHelpText>
    <label>Room Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>