force-app/main/default/objects/Room__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <inlineHelpText>The unit of measurement for the room size, square meters or square feet.</inlineHelpText>
    <label>Unit of Measurement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQM</fullName>
            </value>
            <value>
                <fullName>SQF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>