force-app/main/default/objects/Room__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>